[package]
name = "async-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.4", features = ["postgres"]}
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros"]}
serde = {version = "1.0"}
serde_json = { version = "1"}